--- a/src/features/login/LoginView.css
+++ b/src/features/login/LoginView.css
@@ -7,6 +7,12 @@
     width: 100%;
 }
 
+.headContainer {
+    width: 100%;
+    height: 48px;
+    background-color: wheat;
+}
+
 .logo {
     height: 213.7px;
     width: 213.7px;
@@ -21,5 +27,5 @@
 
     display: block;
 
-    background-color: pink;
+    background-color: #696969;
 }
